# poc-recommendation-fabrics

./: README.md  products_data.csv  pyproject.toml
app/: app.py  helpers.py  update_csv.py
data/: products.csv  products2.csv
notebooks/: recomender.ipynb
