[tool.poetry]
name = "poc-recommendation-fabrics"
version = "0.1.0"
description = "PoC recomender system fabrics"
authors = ["herreradelduque <herreradelduque@gmail.com>"]
readme = "README.md"
packages = [{include = "poc_recommendation_fabrics"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.43.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
